# slab_allocator

./: AUTHORS.md  Cargo.toml  README.md  rust-toolchain.toml
src/: allocator.rs  cache.rs  lib.rs  slab.rs  tests.rs
