[package]
name = "slab-allocator"
version = "0.1.0"
edition = "2021"

[lib]
name = "slab_allocator"
path = "src/lib.rs"

[dependencies]
# Pas de dépendances std

[dev-dependencies]
# Pour les tests uniquement

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = 3
lto = true
